# rsmc-example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
